# ICC1_todoapp3_SQL

./: .env.example  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: main_todoapp-sql-app.yml  main_todoapp-sql-db.yml  main_todoapp-with-sql.yml
templates/: tasks.html:Zone.Identifier
